[package]
name = "reth-dump-alloc"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
eyre = "0.6"
color-eyre = "0.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# Primitives
alloy-primitives = "0.8"

# Reth crates (via git since some tables aren’t on crates.io)
reth-db = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-db", default-features = false, features = ["mdbx"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", package = "reth-primitives" }

[[bin]]
name = "reth-dump-alloc"
path = "src/main.rs"

[[bin]]
name = "genesis-merge"
path = "src/bin/genesis_merge.rs"

[profile.release]
codegen-units = 1
lto = "thin"
